Web Inspector: AX: more properties: exists, required, and invalid (exists was previously combined with ignored) https://bugs.webkit.org/show_bug.cgi?id=128504

Patch by James Craig <jcraig@apple.com> on 2014-02-18
Reviewed by Timothy Hatcher.

Source/WebCore:

Additions to the accessibility node inspector: exists, required, invalid.

Test: inspector-protocol/dom/getAccessibilityPropertiesForNode.html

* inspector/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::buildObjectForAccessibilityProperties):
* inspector/protocol/DOM.json:

Source/WebInspectorUI:

Additions to the accessibility node inspector: exists, required, invalid.

* Localizations/en.lproj/localizedStrings.js:
* UserInterface/DOMNode.js:
* UserInterface/DOMNodeDetailsSidebarPanel.js:

LayoutTests:

New files test the inspector protocol for DOM.getAccessibilityPropertiesForNode

* inspector-protocol/dom/getAccessibilityPropertiesForNode-expected.txt: Added.
* inspector-protocol/dom/getAccessibilityPropertiesForNode.html: Added.

Canonical link: https://commits.webkit.org/147042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164332 268f45cc-cd09-0410-ab3c-d52691b4dbfc